app/src/style/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');

body {
  font-family: 'Roboto', sans-serif;
  font-size: 1em;
  background-color: #d9d9d9;
  margin: 0;
  padding-left: 0;
}

.headerElement {
  float: left;
  height: 80px;
  color: whitesmoke;
}

.l {
  padding-left: 2%;
  width: 6%;
  background-color: #bbb;
}

.l:hover {
  background-color: rgb(78, 78, 78);
}

.r {
  width: 85%;
  padding-left: 0%;
}

.m {
  padding-left: 2%;
  padding-right: 1%;
  width: 4%;
  vertical-align: middle;
  line-height: 80px;
  font-size: 50px;
}

h1 {
  font-size: 50px;
  vertical-align: middle;
  margin: 0;
  line-height: 80px;
}

.headerMenu:after {
  content: '';
  display: table;
  clear: both;
}

.header {
  padding: 5px;
  text-align: left;
  padding-left: 50px;
  background: #1abc9c;
  color: white;
  font-size: 20px;
}

#chart-canvas {
  width: 45vw;
}

button {
  color: white;
  text-align: center;
  background-color: #666666;
}

#glcanvas-container {
  justify-content: center;
}

#time-control-bar {
  width: 600px;
  justify-content: center;
  vertical-align: middle;
  top: -580px;
  margin-top: 0px;
  display: flex;
  height: 50px;
  margin-bottom: 40px;
}

#time-control-days-display {
  color: rgb(109, 109, 109);
  font-weight: 500;
  line-height: 50px;
  vertical-align: bottom;
  margin-bottom: 0;
  font-size: 20px;
}

#time-control-bar > * {
  flex-grow: 1;
  margin: 5px;
}

#time-control-bar > .btn {
  height: 50px;
  height: 50px;
}

#timeline {
  display: flex;
  color: black;
  top: -600px;
}

#model-border-canvases-container {
  width: 600px;
  height: 600px;
  position: relative;
  margin-bottom: 20px;
}

/* Styling the canvas which overlaps the model canvas so that borders computed in Model.js constructor can be added on top of the communities.  */
#BorderCanvas {
  position: absolute;
  right: -1% !important;
  top: 0;
  bottom: 0;
}
#glcanvas {
  background: #d9d9d9;
  border: white 4px solid;
  right: 30px;
}

#sliderDIV {
  margin-top: 30px;
  color: black;
  padding: 10px;
  /* width: 580px; */
  margin-bottom: 100px;
}

.col-sm {
  color: black;
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 20px;
}

.slider {
  -webkit-appearance: none;
  width: 100%;
  height: 10px;
  border-radius: 5px;
  background: #05befc;
  outline: none;
  opacity: 0.7;
  -webkit-transition: 0.3s;
  transition: opacity 0.3s;
}

.outputContainer {
  text-align: right;
}

#main {
  display: flex;
  flex-direction: row;
  align-items: start;
  justify-content: space-between;
}

#left-panel {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  width: 47.6vw;
  /* padding-left: 6vw; */
  background-color: #e0e0e0;
}

#right-side-container {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  width: 47.6vw;
  background-color: #e0e0e0;
  margin-top: 0px;
}

.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: white;
  overflow-x: hidden;
  transition: 0.5s;
}

.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

#main {
  transition: margin-left 0.5s;
  padding: 20px;
}

@media screen and (max-height: 450px) {
  .sidenav {
    padding-top: 15px;
  }
  .sidenav a {
    font-size: 18px;
  }
}

h2 {
  color: rgb(41, 41, 41);
  padding-left: 5px;
  font-size: 38px;
}

h3 {
  font-size: 13px;
  text-align: center;
}

.stat {
  float: left;
  text-align: center;
  align-content: center;
  margin: 10px;
  width: 100px;
}

/* Clear floats after the columns */
.statrow:after {
  align-content: center;
  content: '';
  display: table;
  clear: both;
  margin-bottom: 10px;
}

#demographics {
  width: 45vw;
}

.accordion {
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 20px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 20px;
  font-weight: 500;
  transition: 0.4s;
}

.active,
.accordion:hover {
  background-color: #ccc;
}

.panel {
  background-color: white;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

.preset-panel {
  flex-flow: row;
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.btn {
  background-color: #05befc;
  border: none;
  color: white;
  padding: 16px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  transition-duration: 0.4s;
  cursor: pointer;
  margin-top: 30px;
}

.btn-secondary {
  background-color: white;
  color: black;
  border: 2px solid #05befc;
}

.btn-secondary:hover {
  background-color: #05befc;
  color: white;
}

#t2 {
  position: relative;
  top: -770px;
  left: -1190px;
  opacity: 0.75;
}

.tp {
  height: 3px;
}

#PMDIV {
  position: relative;
  height: 40px;
}

#t3 {
  position: relative;
  left: 150px;
  top: 25px;
  opacity: 1;
}

#t4 {
  position: relative;
  top: 115px;
  left: 75px;
}

#t5 {
  position: relative;
  left: 10px;
  top: 10px;
}

/* RIGHT TOOLTIPS */
.tooltipR {
  background-color: pink;
  color: black;
  display: inline-block;
  cursor: pointer;
}

.tooltipR .tooltiptextR {
  visibility: hidden;
  width: 400px;
  background-color: black;
  color: #fff;
  text-align: left;
  border-radius: 6px;
  padding: 5px 0;

  /* Position the tooltip */
  position: absolute;
  z-index: 1;
}

.tooltipR:hover .tooltiptextR {
  visibility: visible;
}

.tooltipR .tooltiptextR::after {
  content: ' ';
  position: absolute;
  top: 50%;
  right: 100%; /* To the left of the tooltip */
  margin-top: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent black transparent transparent;
}

#t8 {
  position: relative;
  top: -20px;
  left: 140px;
  width: 400px;
  height: 30px;
}
/* ... */

